--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+argparse
 opencv-python-headless
 numpy
-torch
-detectron2 @ git+https://github.com/facebookresearch/detectron2.git
+tqdm
+ultralytics
+easyocr
